post paging source simple tests